--- a/student-service/src/main/resources/application.properties
+++ b/student-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/microservice
+spring.datasource.username=root
+spring.datasource.password=2712
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
 
